--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -1,3 +1,297 @@
-@mainColor: blue;
+@mainColor: orangered;
+@topPanelColor: rgba(24, 24, 24, 0.89);
+@topPanelTextColor: #b8b8b8;
+@discountBorderColor: #d16200;
+@orangeButtonFirstColor: #FF8008;
+@orangeButtonSecColor: #FFC837;
+@backgroundColor: rgba(255, 175, 0, 0.16);
+@rightPanelWidth: 265px;
+@topPanelHeight: 65px;
+
+*{
+  box-sizing: border-box;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+}
+
+.btn-warning, .active{
+  color: white !important;
+  background-image: linear-gradient(to top left, @orangeButtonFirstColor, @orangeButtonSecColor);
+}
+
+.btn-warning:hover{
+  background-image: linear-gradient(to top left, darken(@orangeButtonFirstColor, 8%), darken(@orangeButtonSecColor, 8%));
+}
+
+
+.panel{
+
+}
+
+.text(@size, @height) {
+  font-size: @size;
+  line-height: @height;
+}
+
+.top-panel-title(@size,@m_left){
+  display: inline-block;
+  font-size: @size;
+  margin-left: @m_left;
+  margin-top: 5px;
+}
 
 @import "pizza/pizza-card";
+
+hr{
+  border: 1px dotted @discountBorderColor;
+  margin: 5px ;
+}
+
+h4{
+  margin: 2px;
+}
+
+footer{
+  padding: 20px 190px 20px 20px;
+}
+
+footer p{
+  text-align: center;
+  color: lightslategray;
+  font-size: 13px;
+}
+
+.panel{
+  top:0;
+  position: fixed;
+}
+
+.container-menu{
+  margin-right: @rightPanelWidth;
+  margin-top: @topPanelHeight;
+  background-color: @backgroundColor;
+}
+
+.top-panel {
+  background-color: @topPanelColor;
+  z-index: 1;
+  left: -5px;
+  height: @topPanelHeight;
+  width: 100%;
+
+}
+
+.right-panel{
+  top: -5px;
+  background-color: rgb(252, 255, 232);
+  z-index: 2;
+  right:0;
+  height: 100%;
+  width: @rightPanelWidth;
+}
+
+.badge{
+  position:fixed;
+  z-index:2;
+  background-color: #ea862e;
+  font-size: 20px;
+  border-left: 1px solid @discountBorderColor;
+  border-right: 1px solid @discountBorderColor;
+  left: 10px;
+}
+
+
+
+h1 .badge, .order .badge{
+  position: inherit;
+  margin-bottom: 5px;
+}
+
+.top-badge{
+  height: 85px;
+  width: 93px;
+  top:-10px;
+}
+.bottom-badge{
+  height: 105px;
+  width: 80px;
+  bottom: -10px;
+}
+
+.discount{
+  position: absolute;
+  background: url("../images/discount.svg") no-repeat;
+  height: 21px;
+}
+
+
+.top-discount{
+  width: 100px;
+  background-size: 93px 21px;
+  transform: scaleY(-1);
+  top: 77px;
+  left: -1px;
+}
+
+
+.bottom-discount{
+  width: 80px;
+  background-size: 80px 21px;
+  bottom: 97px;
+  left: -1px;
+}
+
+.logo{
+  margin: 20px 15px;
+  text-align: center;
+  font-weight: 300;
+}
+
+.logo-kma{
+  margin-top: -7px;
+  font-size: 23px;
+}
+
+.discount-bottom-text{
+  text-transform: uppercase;
+  margin-top: 23px;
+}
+
+.text{
+  .text(12px,1.4);
+}
+
+.text2{
+  .text(20px,1.3);
+  font-weight: 200;
+}
+
+.kma{
+  font-size: 22px;
+  font-weight:400;
+}
+
+.top-panel-segment{
+  padding-right: @rightPanelWidth;
+  width: 85%;
+  height: 100%;
+  box-sizing: border-box;
+  margin-left: 120px;
+  color: @topPanelTextColor;
+  font-weight: 400;
+  display: inline-block;
+}
+
+.seg{
+  height: 50%;
+}
+
+.top-segment{
+  border-bottom: 1px solid darkgray;
+}
+
+
+.phone-number{
+  .top-panel-title(16px,0);
+}
+
+.work-hours{
+  .top-panel-title(11px,15px);
+}
+
+.free-delivery{
+  .top-panel-title(12px,15px);
+}
+
+.btn-sign-in{
+  font-size: 12px;
+  float: right;
+  top: 30px;
+  padding: 4px 9px;
+  margin-top: 3px;
+}
+
+.pizza-href{
+  display: inline-block;
+  margin-top: 5px;
+  font-size: medium;
+}
+
+.menu-titles{
+  margin-bottom: 20px;
+  margin-left: 180px;
+}
+
+.menu-titles a {
+  font-size: 15px;
+  margin: 10px;
+  color: @mainColor;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.menu-titles a:hover{
+  background-color: rgba(222, 222, 222, 0.7);
+}
+
+.type{
+  color: lightslategray;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+.big-small{
+  padding: 1px;
+}
+
+.small-pizza{
+  float: left;
+  margin-left: 15px;
+}
+
+.big-pizza{
+  float: right;
+  margin-right: 15px;
+}
+
+.thumbnail{
+  height: 550px;
+  width: 280px;
+}
+
+.size, .weight{
+  padding: 1px 5px;
+  margin-left: 20px;
+}
+
+.buy-button{
+  margin: -5px 5px 0 5px;
+}
+
+.price{
+  margin-top: 5px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.price span{
+  font-size: 24px;
+}
+
+.price p{
+  margin-top: -5px;
+}
+
+.caption p{
+  font-size: 12px;
+}
+
+.caption h3 {
+  font-weight: bold;
+  //background-color: white;
+}
+
+.order{
+  font-size: 20px;
+  margin: 20px 10px;
+  font-weight: bold;
+}
