--- a/Frontend/templates/PizzaCart_OneItem.ejs
+++ b/Frontend/templates/PizzaCart_OneItem.ejs
@@ -6,4 +6,4 @@
         <span class="label label-default"><%= quantity %></span>
         <button class="btn btn-success plus">+</button>
     </div>
-</div>
+</div>=
