--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -483,7 +483,13 @@ h1 .badge, .order-title .badge {
 
 @media (max-width: 550px) {
   .top-panel-segment {
-    height: 58%;
+    height: 62%;
+  }
+  .top-panel{
+    height: @topPanelHeight + 15px;
+  }
+  .phone-number{
+    font-size: 10px;
   }
 }
 
@@ -495,9 +501,14 @@ h1 .badge, .order-title .badge {
   .menu {
     margin-left: -50px;
   }
-  .menu-titles{
-    margin-left: 80px;
+  .menu-titles {
+    margin-left: 140px !important;
   }
+  .main-title{
+    font-size: 27px;
+    margin-left: 150px ;
+  }
+
 }
 
 
