--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -515,13 +515,30 @@ h1 .badge, .order-title .badge {
 @media (min-width: 2500px) {
   .thumbnail {
     font-size: 18px;
-    height: 600px;
+    height: 610px;
   }
 
   .pizza-description {
-    height: 80px;
+    height: 90px;
   }
 }
+
+@media(min-width: 4500px){
+  .pizza-description {
+    height: 200px;
+  }
+  .small-pizza, .big-pizza{
+    margin: auto;
+  }
+  .pizza-card{
+    height: 800px;
+  }
+  .buy-button{
+    margin-top: 15px;
+  }
+
+}
+
 
 @media (max-width: 1500px) {
   .menu {
