--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -337,8 +337,10 @@ h1 .badge, .order-title .badge {
   overflow-x: hidden;
 }
 
-.caption h3 {
+.pizza-title {
   font-weight: bold;
+  font-size: 25px;
+  color: @mainColor;
 }
 
 #delete-order {
@@ -455,7 +457,7 @@ h1 .badge, .order-title .badge {
   }
 
 }
-@media(max-width: 1050px){
+@media(max-width: 990px){
   .thumbnail {
     margin-left: 70px !important;
   }
@@ -568,4 +570,8 @@ h1 .badge, .order-title .badge {
   .menu {
     padding-right: 270px;
   }
+}
+
+.no-big-small{
+  margin-left: 80px;
 }
