--- a/Frontend/templates/PizzaMenu_OneItem.ejs
+++ b/Frontend/templates/PizzaMenu_OneItem.ejs
@@ -17,25 +17,103 @@ function getIngredientsArray(pizza) {
 }
 
    %>
-<div class="col-md-6 col-lg-4 pizza-card">
-    <div class="thumbnail">
+
+
+<div class="col-md-6 col-lg-4">
+    <div class="thumbnail pizza-card">
         <img class="pizza-icon" src="<%= pizza.icon %>" alt="Pizza">
 
         <% if(pizza.is_new) { %>
-        <span class="label label-danger">Нова</span>
+        <h3 class="pizza-label short-label">
+            <span class="label label-danger">Нова</span>
+        </h3>
         <% } else if(pizza.is_popular) {%>
-        <span class="label label-success">Популярна</span>
+        <h3 class="pizza-label label-long">
+            <span class="label label-success">Популярна</span>
+        </h3>
         <% } %>
 
-        <div class="caption">
-            <span class="title"><%= pizza.title %></span>
-            <div class="type"><%= pizza.type %></div>
-            <div class="description">
-                <%= getIngredientsArray(pizza).join(", ") %>
-            </div>
-        </div>
 
-        <!-- Перед тим щоб показати кнопку необхідно переконатися, що піца має великий розмір -->
-        <button class="btn btn-primary buy-big">Купити велику</button>
+        <div class="caption">
+
+            <span class="pizza-title"><%= pizza.title %></span>
+            <div class="type"><%= pizza.type %></div>
+            <p class="pizza-description">
+                <%= getIngredientsArray(pizza).join(", ") %>
+            </p>
+
+
+            <% if(!pizza.no_big_size) { %>
+
+            <div class="big-small">
+
+                <div class="small-pizza">
+
+                    <span class="size">  <img src="assets/images/size-icon.svg"> <%= pizza.small_size.size %> </span>
+                    <br>
+                    <span class="weight">  <img src="assets/images/weight.svg"> <%= pizza.small_size.weight %> </span>
+                    <br>
+
+                    <div class="price">
+                        <span> <%= pizza.small_size.price %> </span>
+                        <br>
+                        <p> грн. </p>
+
+                        <a href="#" class="btn btn-warning buy-button buy-small">Купити</a>
+
+                    </div>
+
+                </div>
+
+
+                <div class="big-pizza">
+
+                    <span class="size">  <img src="assets/images/size-icon.svg">  <%= pizza.big_size.size %> </span>
+                    <br>
+                    <span class="weight"> <img src="assets/images/weight.svg">  <%= pizza.big_size.weight %> </span>
+                    <br>
+
+                    <div class="price">
+                        <span> <%= pizza.big_size.price %> </span>
+                        <br>
+                        <p> грн. </p>
+
+                        <a href="#" class="btn btn-warning buy-button buy-big">Купити</a>
+
+                    </div>
+
+                </div>
+
+                <% } else{%>
+
+                <div class="no-big-small">
+
+                    <div class="small-pizza">
+
+                        <span class="size">  <img src="assets/images/size-icon.svg"> <%= pizza.small_size.size %> </span>
+                        <br>
+                        <span class="weight">  <img src="assets/images/weight.svg"> <%= pizza.small_size.weight %> </span>
+                        <br>
+
+                        <div class="price">
+                            <span> <%= pizza.small_size.price %> </span>
+                            <br>
+                            <p> грн. </p>
+
+                            <a href="#" class="btn btn-warning buy-button buy-small">Купити</a>
+
+                        </div>
+
+                    </div>
+
+                    </div>
+
+
+                    <% } %>
+
+            </div>
+
+
+        </div>
     </div>
 </div>
