update: local storage and filters

--- a/Frontend/templates/PizzaMenu_OneItem.ejs
+++ b/Frontend/templates/PizzaMenu_OneItem.ejs
@@ -59,7 +59,7 @@ function getIngredientsArray(pizza) {
                         <br>
                         <p> грн. </p>
 
-                        <a href="#" class="btn btn-warning buy-button buy-small">Купити</a>
+                        <button class="btn btn-warning buy-button buy-small">Купити</button>
 
                     </div>
 
@@ -78,7 +78,7 @@ function getIngredientsArray(pizza) {
                         <br>
                         <p> грн. </p>
 
-                        <a href="#" class="btn btn-warning buy-button buy-big">Купити</a>
+                        <button href="#" class="btn btn-warning buy-button buy-big">Купити</button>
 
                     </div>
 
@@ -100,7 +100,7 @@ function getIngredientsArray(pizza) {
                         <br>
                         <p> грн. </p>
 
-                        <a href="#" class="btn btn-warning buy-button buy-big">Купити</a>
+                        <button href="#" class="btn btn-warning buy-button buy-big">Купити</button>
 
                     </div>
 
@@ -125,7 +125,7 @@ function getIngredientsArray(pizza) {
                             <br>
                             <p> грн. </p>
 
-                            <a href="#" class="btn btn-warning buy-button buy-small">Купити</a>
+                            <button class="btn btn-warning buy-button buy-small">Купити</button>
 
                         </div>
 
