--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -161,6 +161,7 @@ footer p {
   border-left: 1px solid @discountBorderColor;
   border-right: 1px solid @discountBorderColor;
   left: 10px;
+  padding-bottom: 5px ;
 }
 
 h1 .badge, .order-title .badge {
@@ -298,7 +299,8 @@ h1 .badge, .order-title .badge {
   margin-bottom: 5px;
 }
 
-.big-small {
+.big-small, .no-big-small {
+  margin-top: 10px;
   padding: 1px;
 }
 
@@ -318,7 +320,7 @@ h1 .badge, .order-title .badge {
 }
 
 .buy-button {
-  margin: -5px 5px 0 5px;
+  margin: 10px 5px 0 5px;
 }
 
 .price {
@@ -336,7 +338,7 @@ h1 .badge, .order-title .badge {
 }
 
 .pizza-description {
-  height: 40px;
+  height: 45px;
   font-size: 11px;
   overflow-x: hidden;
 }
