--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -2,9 +2,11 @@
 @topPanelColor: rgba(24, 24, 24, 0.89);
 @topPanelTextColor: #b8b8b8;
 @discountBorderColor: #d16200;
-@orangeButtonFirstColor: #FF8008;
-@orangeButtonSecColor: #ffc837;
-@backgroundColor: rgba(255, 114, 15, 0.16);
+@orangeBtnFirstColor: #FF8008;
+@orangeBtnSecColor: #ffc837;
+@grayBtnFirstColor: rgb(253, 250, 250);
+@grayBtnSecColor: rgb(245, 244, 247);
+@backgroundColor: rgba(255, 123, 60, 0.17);
 @rightPanelColor: white;
 @orderColor: #f0f0f0;
 @rightPanelWidth: 305px;
@@ -18,11 +20,11 @@
 
 .btn-warning, .active {
   color: white !important;
-  background-image: linear-gradient(to top left, @orangeButtonFirstColor, @orangeButtonSecColor) !important;
+  background-image: linear-gradient(to top left, @orangeBtnFirstColor, @orangeBtnSecColor) !important ;
 }
 
 .btn-warning:hover:enabled {
-  background-image: linear-gradient(to top left, darken(@orangeButtonFirstColor, 8%), darken(@orangeButtonSecColor, 8%)) !important;
+  background-image: linear-gradient(to top left, darken(@orangeBtnFirstColor, 5%), darken(@orangeBtnSecColor, 5%)) !important ;
 }
 
 .text(@size, @height) {
@@ -161,7 +163,7 @@ footer p {
   border-left: 1px solid @discountBorderColor;
   border-right: 1px solid @discountBorderColor;
   left: 10px;
-  padding-bottom: 5px ;
+  padding-bottom: 5px;
 }
 
 h1 .badge, .order-title .badge {
@@ -377,7 +379,7 @@ h1 .badge, .order-title .badge {
   }
   &.price {
     text-align: inherit;
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
@@ -403,13 +405,13 @@ h1 .badge, .order-title .badge {
 }
 
 .row {
-  margin: 10px;
+  margin: 10px !important;
 }
 
 .sum {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  margin: 10px;
+  margin: 10px 0 10px 10px;
 }
 
 .sum-num {
@@ -626,4 +628,35 @@ h1 .badge, .order-title .badge {
 
 .empty-fridge {
   display: none;
+}
+
+.edit-tools {
+  display: inline-block;
+}
+#final-quantity{
+  display: none;
+}
+.sum-order-title{
+  margin-left: 0 !important;
+}
+
+.buy-mode {
+  .edit-tools,#delete-order {
+    display: none;
+  }
+  #final-quantity{
+    display: inline-block;
+    margin-left: 15px;
+    font-size: 18px;
+  }
+  #order-btn{
+    font-size: 20px;
+    border-color: lightgray;
+    color: black !important;
+    background-image: linear-gradient(to top left, @grayBtnFirstColor, @grayBtnSecColor) ;
+  }
+  #order-btn:hover {
+    background-image: linear-gradient(to top left, darken(@grayBtnFirstColor, 5%), darken(@grayBtnSecColor, 5%)) ;
+  }
+
 }
