--- a/Backend/views/common/header.ejs
+++ b/Backend/views/common/header.ejs
@@ -16,5 +16,33 @@
 </head>
 <body>
 
-<h1>Top Panel on All Pages</h1>
+<div class=" panel top-panel ">
+    <div class="  badge top-badge ">
+        <div class=" discount top-discount "></div>
+        <div class="logo">
+            <div class="text2"> Pizza</div>
+            <div class="text2 kma"> KMA</div>
+        </div>
+    </div>
+
+    <div class=" top-panel-segment">
+        <div class="seg top-segment">
+
+
+            <div class="phone-number"> (044) 175 3 888</div>
+            <div class="work-hours"> 24 години/7 днiв на тиждень</div>
+            <div class="free-delivery  "> Безкоштовна доставка пiци</div>
+            <div class="btn btn-warning btn-sign-in"> Ввiйти </div>
+
+
+        </div>
+
+        <div class="seg">
+
+            <a href="#" style="color: lightgray;" class="pizza-href"> Піца </a>
+
+        </div>
+    </div>
+
+</div>
 
