--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -1,6 +1,7 @@
-
-<p>Footer Goes Here</p>
-
+<footer>
+    <p> Pizza.22 - практичний проект в межах курсу JavaScript в Києво-Могилянській Академії </p>
+    <p> Доставка піци не здійснюється </p>
+</footer>
 
 <!-- jQuery JavaScript -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
