--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -1,3 +1,14 @@
+
+<div class="  badge bottom-badge ">
+    <div class=" discount bottom-discount ">
+        <div class="discount-bottom-text">
+            <div align="center" class="text"> Цього <br> &nbspтижня <br> на все</div>
+            <hr>
+            <h4> -20% </h4>
+        </div>
+    </div>
+</div>
+
 <footer>
     <p> Pizza.22 - практичний проект в межах курсу JavaScript в Києво-Могилянській Академії </p>
     <p> Доставка піци не здійснюється </p>
