--- a/Backend/views/orderPage.ejs
+++ b/Backend/views/orderPage.ejs
@@ -1,61 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Pizza</title>
-
-    <!-- Bootsrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-    <!-- LESS основний файл -->
-    <link rel="stylesheet/less" type="text/css" href="assets/less/main.less"/>
-    <!-- LESS JavaScript компілятор -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
-
-
-</head>
-<body>
-<div id="cart"></div>
-
-<div class=" panel top-panel ">
-    <div class="  badge top-badge ">
-        <div class=" discount top-discount "></div>
-        <div class="logo">
-            <div class="text2"> Pizza</div>
-            <div class="text2 kma"> KMA</div>
-        </div>
-    </div>
-
-    <div class=" top-panel-segment">
-        <div class="seg top-segment">
-
-
-            <div class="phone-number"> (044) 175 3 888</div>
-            <div class="work-hours"> 24 години/7 днiв на тиждень</div>
-            <div class="free-delivery  "> Безкоштовна доставка пiци</div>
-            <div class="btn btn-warning btn-sign-in"> Ввiйти</div>
-
-
-        </div>
-
-        <div class="seg">
-
-            <a href="#" style="color: lightgray;" class="pizza-href"> Піца </a>
-
-        </div>
-    </div>
-
-</div>
-
-<div class="  badge bottom-badge ">
-    <div class=" discount bottom-discount ">
-        <div class="discount-bottom-text">
-            <div align="center" class="text"> Цього <br> &nbspтижня <br> на все</div>
-            <hr>
-            <h4> -20% </h4>
-        </div>
-    </div>
-</div>
+<% include common/header.ejs %>
 
 <div class="container-menu container-fluid ">
     <div class="menu container">
@@ -137,21 +80,6 @@
 
 </div>
 
-<footer>
-    <p> Pizza.22 - практичний проект в межах курсу JavaScript в Києво-Могилянській Академії </p>
-    <p> Доставка піци не здійснюється </p>
-</footer>
-
-<!-- jQuery JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
-
-<!--Bootsrap JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-<!--Own JavaScript -->
-<script type="text/javascript" src="assets/js/main.js"></script>
-
 <script type="text/javascript"
         src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA4AbdrQSx_0JkebjqZaaxyj95e2tae-4M">
 </script>
@@ -172,53 +100,12 @@
             map: map,
             icon: "assets/images/map-icon.png"
         });
-
-        google.maps.event.addListener(map, 'click', function (me) {
-            var coordinates = me.latLng;
-            geocodeLatLng(coordinates, function (err, adress) {
-                if (!err) {
-                    console.log(adress);
-                }
-                else console.log("Немає адреси")
-            })
-        });
     }
 
-    function geocodeLatLng(latlng, callback) {
-        var geocoder = new google.maps.Geocoder();
-        geocoder.geocode({'location': latlng}, function (results, status) {
-            if (status === google.maps.GeocoderStatus.OK && results[1]) {
-                var adress = results[1].formatted_address;
-                callback(null, adress);
-            } else {
-                callback(new Error("Can't find adress"));
-            }
-        });
-    }
-
-    function calculateRoute(A_latlng, B_latlng, callback) {
-        var directionService = new google.maps.DirectionsService();
-        directionService.route({
-            origin: A_latlng,
-            destination: B_latlng,
-            travelMode: google.maps.TravelMode["DRIVING"]
-        }, function (response, status) {
-            if (status == google.maps.DirectionsStatus.OK) {
-                varleg = response.routes[0].legs[0];
-                callback(null, {
-                    duration: leg.duration
-                });
-            } else {
-                callback(new Error("Can'	not	find	direction"));
-            }
-        });
-    }
 
     google.maps.event.addDomListener(window, 'load', initialize);
 
 
 </script>
 
-
-</body>
-</html>
+<% include common/footer.ejs %>
