--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -746,7 +746,7 @@ h1 .badge, .order-title .badge {
 }
 
 #googleMap{
-  margin-top: 240px;
+  margin-top: 250px;
 }
 
 @media (max-width: 1000px) {
@@ -759,4 +759,15 @@ h1 .badge, .order-title .badge {
   margin-right: 15px;
 }
 
-//TODO scale 200 отступ нужен scale 125 отступ большой
+.information{
+  font-weight: bold;
+  display: inline-block;
+}
+
+.order-info{
+  display: inline-block;
+}
+
+#time-info, #address-info{
+  display: inline-block;
+}
