--- a/Backend/views/common/footer.ejs
+++ b/Backend/views/common/footer.ejs
@@ -1,4 +1,3 @@
-
 <div class="  badge bottom-badge ">
     <div class=" discount bottom-discount ">
         <div class="discount-bottom-text">
@@ -14,13 +13,21 @@
     <p> Доставка піци не здійснюється </p>
 </footer>
 
+
 <!-- jQuery JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"> </script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 <!--Bootsrap JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!--Own JavaScript -->
-<script type="text/javascript"  src="assets/js/main.js"> </script>
+<script type="text/javascript" src="assets/js/main.js"> </script>
+
+<script type="text/javascript"
+        src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA4AbdrQSx_0JkebjqZaaxyj95e2tae-4M">
+</script>
+
+<!--<script> google.maps.event.addDomListener(window, 'load', initialize); </script>-->
+
 </body>
 </html>
