--- a/Backend/views/orderPage.ejs
+++ b/Backend/views/orderPage.ejs
@@ -43,8 +43,10 @@
                 <div class="col-md-5">
                     <div class="bs-callout bs-callout-success extra-info">
                         <h4>Інформація про замовлення</h4>
-                        <p id="time-info" class="order-info"><b>Приблизний час доставки:</b> невідомий </p>
-                        <p id="address-info" class="order-info"><b>Адреса доставки:</b> невідома</p>
+                        <h5 class="order-info information"> Приблизний час доставки:  </h5>
+                        <p id="time-info" class="order-info"> невідомий </p>
+                        <h5 class="order-info information"> Адреса доставки:  </h5>
+                        <p id="address-info" class="order-info"> невідома</p>
                     </div>
                 </div>
 
@@ -64,7 +66,7 @@
 <div class=" panel right-panel buy-mode">
 
     <div class="right-title">
-        <div class="order-title"> Замовлення <span id="order-quantity" class="badge "> 0 </span></div>
+        <div class="order-title"> Замовлення <span id="order-quantity" class="badge "> </span></div>
     </div>
 
     <div class=" order-bill">
@@ -79,33 +81,5 @@
     </div>
 
 </div>
-
-<script type="text/javascript"
-        src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA4AbdrQSx_0JkebjqZaaxyj95e2tae-4M">
-</script>
-
-<script>
-
-    function initialize() {
-        var mapProp = {
-            center: new google.maps.LatLng(50.464379, 30.519131),
-            zoom: 11
-        };
-        var html_element = document.getElementById("googleMap");
-        var map = new google.maps.Map(html_element, mapProp);
-
-        var point = new google.maps.LatLng(50.464379, 30.519131);
-        var marker = new google.maps.Marker({
-            position: point,
-            map: map,
-            icon: "assets/images/map-icon.png"
-        });
-    }
-
-
-    google.maps.event.addDomListener(window, 'load', initialize);
-
-
-</script>
 
 <% include common/footer.ejs %>
